deploy/components/network-policies/workqueue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-factory-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: factory-db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: admin
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: receiver
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: dispatcher
      ports:
        - port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-factory-admin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: factory-admin
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
          podSelector:
            matchLabels:
              app: keda-operator
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: factory-db
      ports:
        - port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
